<resources>
    <string name="app_name">Week_02</string>
    <string name="txt_AC">AC</string>
    <string name="txt_percentage">%</string>
    <string name="txt_divide">/</string>
    <string name="txt_7">7</string>
    <string name="txt_8">8</string>
    <string name="txt_9">9</string>
    <string name="txt_multiply">×</string>
    <string name="txt_4">4</string>
    <string name="txt_5">5</string>
    <string name="txt_6">6</string>
    <string name="txt_minus">-</string>
    <string name="txt_1">1</string>
    <string name="txt_2">2</string>
    <string name="txt_3">3</string>
    <string name="txt_plus">+</string>
    <string name="txt_0">0</string>
    <string name="txt_point">.</string>
    <string name="txt_equal">=</string>
</resources>