<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="view"
            type="com.cj.android_class.week_02.MainActivity" />
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background"
        android:padding="20dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="end|center_vertical|bottom">

            <TextView
                android:id="@+id/txt_expression"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={view.expression}"
                android:textSize="18sp"
                android:gravity="end"
                android:textColor="@color/btn_background"/>

            <TextView
                android:id="@+id/txt_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={view.result}"
                android:textColor="#FFFFFF"
                android:gravity="end"
                android:textStyle="bold"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:weightSum="10"
            android:divider="@drawable/divider"
            android:showDividers="middle"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_ac"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                android:text="@string/txt_AC"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_percent"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                android:text="@string/txt_percentage"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_divide"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                android:text="@string/txt_divide"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                app:icon="@drawable/baseline_backspace_24"
                app:iconTint="#FFFFFF"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:weightSum="10"
            android:divider="@drawable/divider"
            android:showDividers="middle"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_7"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                android:text="@string/txt_7"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_8"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                android:text="@string/txt_8"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_9"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                android:text="@string/txt_9"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_multiply"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                android:text="@string/txt_multiply"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:weightSum="10"
            android:divider="@drawable/divider"
            android:showDividers="middle"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_4"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                android:text="@string/txt_4"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_5"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                android:text="@string/txt_5"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_6"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                android:text="@string/txt_6"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_minus"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                android:text="@string/txt_minus"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:weightSum="10"
            android:divider="@drawable/divider"
            android:showDividers="middle"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_1"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                android:text="@string/txt_1"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_2"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                android:text="@string/txt_2"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_3"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                android:text="@string/txt_3"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_plus"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                android:text="@string/txt_plus"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:weightSum="10"
            android:divider="@drawable/divider"
            android:showDividers="middle"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_0"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                android:text="@string/txt_0"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_point"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_background"
                android:text="@string/txt_point"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:onClick="@{(v) -> view.onClick(v)}"
                android:id="@+id/btn_equal"
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFAB933"
                android:text="@string/txt_equal"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</layout>